feat: session-3 updated

--- a/session-03/index.html
+++ b/session-03/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -56,6 +57,5 @@
     <!-- <script src="./assets/js_starter/scripts_challenge_2.js"></script> -->
     <!-- <script src="./assets/js_starter/scripts_challenge_3.js"></script> -->
     <script src="./assets/js_starter/scripts_challenge_4.js"></script>
-    cript>
   </body>
 </html>
